fixed pictures tweet pics not wrapping and t.name in name of tiles

--- a/app/assets/stylesheets/twitter.css.scss
+++ b/app/assets/stylesheets/twitter.css.scss
@@ -9,6 +9,12 @@
 
 #tweetbox .col-xs-11{
 	padding-left: 0px;
+	padding-right: 0px;
+}
+
+#tweetbox .col-xs-1{
+	padding-left: 50px;
+	padding-right: 0px;
 }
 
 #tweetbox img{
